--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -21,4 +21,4 @@ jobs:
         run: |
           git add .
           git commit -m "Auto commit"
-          git push
+          git push origin main
